# cookiecutter-k0s-zerotrust

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
tests/: test_bake.py
{{cookiecutter.project_slug}}/: README.md
{{cookiecutter.project_slug}}/gitops/bootstrap/: root-app.yaml
{{cookiecutter.project_slug}}/gitops/bootstrap/templates/: apps.yaml  mesh.yaml  observability.yaml  security.yaml
{{cookiecutter.project_slug}}/scripts/: bootstrap-argocd.sh  install-k0s.sh  scaffold-service.py
