[project]
name = "cookiecutter-k0s-zerotrust"
version = "0.1.0"
description = "Cookiecutter template for a Zero Trust k0s cluster with GitOps"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cookiecutter>=2.1.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cookies>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hooks"]